--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-test
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test Test</title>
+  </head>
+  <body>
+
+    <h1>This is a Test</h1>
+
+  </body>
+</html>
