--- a/tiger-pistats/index.html
+++ b/tiger-pistats/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="product-description">
             <h2>Introducing Pi Stats for Mac OS X Tiger</h2>
-            <p>Introducing Pi Stats for Mac OS X Tiger, the top-notch solution for managing and visualizing pi-hole data
+            <p>Pi Stats for Mac OS X Tiger, the top-notch solution for managing and visualizing pi-hole data
                 on the most advanced operating system, Mac OS X Tiger. With its cool brushed metal design and smooth
                 interface, this powerful tool puts you in control of your pi-hole setup.
             </p>
