--- a/tiger-pistats/index.html
+++ b/tiger-pistats/index.html
@@ -57,7 +57,7 @@
 
                 var textFooter = document.querySelector(".text-footer");
                 if (textFooter) {
-                    textFooter.textContent = "Note: Pi Stats for Mac OS Tiger is a project made just for fun. I have no intentions of adding more features. This project is offered at a 'pay what you want' price. However, since you're running this in an old Safari version that can't access Gumroad, the download button is a direct download link for your convenience :)";
+                    textFooter.textContent = "Note: Pi Stats for Mac OS Tiger is a project made just for fun. I have no intentions of adding more features. This project is offered at a 'pay what you want' price. However, since you're running this in an old Safari version - respect ;) - that can't access Gumroad, the download button is a direct download link for your convenience :)";
                 }
             }
         </script>
